<resources>
    <string name="app_name">私募云理财师</string>
    <string name="nav_back_again_finish">再按一次退出程序</string>
    <string name="avd_no_wifi_str">您正在使用非WIFI网络，播放将产生费用...</string>
    <string name="avd_rich_go_str">土豪请继续</string>
    <string name="no_videoid_str">你播放的视频不存在</string>
    <string name="avd_no_net_str">网络未连接，请检查网络设置</string>
    <string name="avd_ref_str">刷新重试</string>
    <string name="avd_play_error_str">播放失败</string>
    <string name="avd_try_again_str">请重新尝试</string>
    <string name="cache_str">缓存</string>
    <string name="avd_please_choise_str">请选择缓存清晰度</string>
    <string name="hd_str">高清</string>
    <string name="sd_str">标清</string>
    <string name="avd_look_cache_str">查看缓存视频</string>
    <string name="caching_str">缓存中</string>
    <string name="cached_str">已缓存</string>
    <string name="paused_str">已暂停</string>
    <string name="menu_play_history_str">播放历史</string>
    <string name="menu_download_video_str">下载视频</string>
    <string name="delete_str">删除</string>
    <string name="delete_1_str">删除(%s)</string>
    <string name="played_str">" 已播放 %s"</string>
    <string name="play_history_str">播放记录</string>
    <string name="choice_all_str">全选</string>
    <string name="cancel_str">取消</string>
    <string name="enter_str">确认</string>
    <string name="cancel_choice_all_str">取消全选</string>
    <string name="local_video_str">本地视频</string>
    <string name="avd_start_all">全部开始</string>
    <string name="avd_all_space_str">总空间</string>
    <string name="avd_free_space_str">剩余</string>
    <string name="vdla_is_sure_delete_str">是否要删除正在播放的视频文件？</string>
    <string name="vdla_stop_all_str">全部停止</string>
</resources>
