<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".mvp.ui.video.VideoHistoryListActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back_black_24dp"
            app:popupTheme="@style/Theme.AppCompat.DayNight.PopupOverlay">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dimens_sp_18" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/ll_avd_head"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_avd_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_video_start" />

            <TextView
                android:id="@+id/tv_avd_start_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="18dp"
                android:text="@string/avd_start_all"
                android:textColor="@color/color_333333"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:id="@+id/v_avd_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/ll_avd_head"
            android:background="@color/color_d0d0d0" />

        <com.dinuscxj.refresh.RecyclerRefreshLayout
            android:id="@+id/recyclerRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/tv_avd_allspace"
            android:layout_below="@+id/v_avd_line">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.dinuscxj.refresh.RecyclerRefreshLayout>


        <TextView
            android:id="@+id/tv_avd_allspace"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_above="@+id/ll_avd"
            android:background="@color/color_666666"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/avd_all_space_str"
            android:textColor="@color/white"
            android:textSize="@dimen/dimens_sp_10" />

        <LinearLayout
            android:id="@+id/ll_avd"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:background="#f6f6f6"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_avd_choiceAll"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/choice_all_str"
                android:textColor="#333"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="11dp"
                android:layout_marginTop="11dp"
                android:background="#e6e6e6" />

            <TextView
                android:id="@+id/tv_avd_delete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/delete_str"
                android:textColor="#999"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>