<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pro="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipChildren="false"
    android:fitsSystemWindows="true"
    tools:context=".mvp.ui.video.VideoDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false">

        <RelativeLayout
            android:id="@+id/rl_avd_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false">

            <com.tencent.qcload.playersdk.ui.VideoRootFrame
                android:id="@+id/vrf_avd"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/iv_mvv_cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.cgbsoft.lib.widget.ProgressWheel
                android:id="@+id/pw_mvv_wait"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="70dp"
                pro:matProg_barColor="#a3a3a3"
                pro:matProg_progressIndeterminate="true" />

            <LinearLayout
                android:id="@+id/ll_mvv_nowifi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_333333"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_mvv_no_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:text="@string/avd_no_wifi_str"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_mvv_rich_go"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/avd_rich_go_str"
                    android:textColor="#5ba8f3"
                    android:textSize="14sp" />
            </LinearLayout>


            <ImageView
                android:id="@+id/iv_avd_back"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignLeft="@+id/vrf_avd"
                android:layout_marginLeft="8dp"
                android:src="@drawable/ic_play_back" />

            <ImageView
                android:id="@+id/iv_avd_back_play"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignRight="@+id/vrf_avd"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_back_play" />
        </RelativeLayout>

        <ScrollView
            android:id="@+id/sv_avd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rl_avd_head"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="16dp">

                    <TextView
                        android:id="@+id/tv_avd_like_num"
                        android:layout_width="wrap_content"
                        android:layout_height="22dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:paddingLeft="2dp"
                        android:paddingRight="2dp"
                        android:text="10"
                        android:textColor="@color/color_c73d33"
                        android:textSize="12sp" />

                    <ImageView
                        android:id="@+id/iv_avd_like"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/tv_avd_like_num"
                        android:src="@drawable/ic_like_up" />

                    <LinearLayout
                        android:id="@+id/ll_avd_cache"
                        android:layout_width="wrap_content"
                        android:layout_height="22dp"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="4dp"
                        android:layout_toLeftOf="@+id/iv_avd_like"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_avd_cache"
                            android:layout_width="22dp"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_cache" />

                        <TextView
                            android:id="@+id/tv_avd_cache"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/cache_str"
                            android:textColor="@drawable/select_avd_cache"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_avd_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_toLeftOf="@+id/ll_avd_cache"
                        android:lineSpacingExtra="4dp"
                        android:paddingBottom="8dp"
                        android:paddingRight="8dp"
                        android:textColor="#333333"
                        android:textSize="@dimen/dimens_sp_15" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_alignLeft="@+id/tv_avd_title"
                        android:layout_alignRight="@+id/tv_avd_title"
                        android:layout_below="@+id/tv_avd_title"
                        android:layout_marginRight="8dp"
                        android:background="@color/color_d0d0d0" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_avd_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:textColor="@color/color_666666"
                    android:textSize="@dimen/dimens_sp_14" />
            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/rl_avd_download"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rl_avd_head"
            android:background="@color/white"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="25dp"
                android:text="@string/avd_please_choise_str"
                android:textColor="#333"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/iv_avd_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/ic_avd_close" />

            <TextView
                android:id="@+id/tv_avd_hd"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="115dp"
                android:background="#00ffffff"
                android:gravity="center"
                android:text="@string/hd_str"
                android:textColor="#666"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_avd_sd"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@id/tv_avd_hd"
                android:background="#00ffffff"
                android:gravity="center"
                android:text="@string/sd_str"
                android:textColor="#666"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/ll_avd_cache_open"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#e6e6e6" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_avd_folder">

                        <TextView
                            android:id="@+id/tv_avd_cache_num"
                            android:layout_width="wrap_content"
                            android:layout_height="12dp"
                            android:layout_gravity="right"
                            android:background="@drawable/shape_round_msg"
                            android:gravity="center"
                            android:paddingLeft="4dp"
                            android:paddingRight="4dp"
                            android:text="0"
                            android:textColor="@color/white"
                            android:textSize="@dimen/dimens_sp_6" />
                    </FrameLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/avd_look_cache_str"
                        android:textColor="#333"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>